Added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+Adlm
+AppleScripts
+Applications
+Creative Cloud Files
+Downloads
+Google Drive
+Hightail
+InPlate_cc
+InVision
+Incompatible Software
+Library
+Movies
+Music
+Pictures
+Public
+Screenshots
+builds
+dead.letter
+keychain.rb
+redis-3.0.2
+shell-scripts
+spark-installer
+tmp
 Desktop
 Documents
 Design
@@ -9,3 +32,17 @@ Desktop.ini
 Thumbs.db
 .Spotlight-V100
 .Trashes
+.CFUserTextEncoding
+.Extensis
+.Graboid
+.MacOSX
+.Qprints
+.ROESEngineCache
+.WebStorm9
+.Xauthority
+.abobe
+.android
+.appcfg_nag
+.aspera
+.cache
+.dropbox
