feat(*): added a few new things

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,8 +7,10 @@ font_features CaskaydiaCoveNerdFontCompleteM-Regular +zero +onum
 font_size 15
 adjust_line_height 175%
 
+background_opacity 0.85
+background_tint 1
 cursor_blink_interval 0
-window_padding_width 10
+window_padding_width 5
 hide_window_decorations no
 macos_show_window_title_in all
 macos_quit_when_last_window_closed true
