--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -5,9 +5,9 @@
 # Colors
 
 foreground #979eab
-background #282c34
+background #2e3440
 
-color0 #282c34
+color0 #2e3440
 color1 #e06c75
 color2 #98c379
 color3 #e5c07b
@@ -26,7 +26,7 @@ color15 #abb2bf
 
 # Tab Bar
 
-active_tab_foreground   #282c34
+active_tab_foreground   #2e3440
 active_tab_background   #979eab
 inactive_tab_foreground #abb2bf
-inactive_tab_background #282c34
+inactive_tab_background #2e3440
