--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,12 @@
 # Configuration
 #--------------------------------------------------------------------------
 
+set -g @plugin 'tmux-plugins/tpm'
+
+#+--- Color Themes ---+
+# set -g @plugin "arcticicestudio/nord-tmux"
+
+
 # Use Vi mode
 setw -g mode-keys vi
 
@@ -60,15 +66,21 @@ set -s escape-time 0
 #----------------------------------------------------------
 
 # Status line customisation
+set-option -g status-position bottom
 set-option -g status-left-length 100
 set-option -g status-right-length 100
-set-option -g status-left " #{session_name}  "
-set-option -g status-right "#{pane_title} "
-set-option -g status-style "fg=#7C7D83 bg=#242631"
-set-option -g window-status-format "#{window_index}:#{pane_current_command}#{window_flags} "
-set-option -g window-status-current-format "#{window_index}:#{pane_current_command}#{window_flags} "
-set-option -g window-status-current-style "fg=#E9E9EA"
+set-option -g status-left " #[fg=#92959b] #{session_name} "
+set-option -g status-right "#[fg=#92959b] %d/%m %R"
+# set -g status-right '#[fg=#d0d3dd,bg=#434c5e] %d/%m #[fg=#2e3440,bg=#81a1c1] %R '
+set-option -g status-style "fg=#92959b bg=#2e3440"
+set-option -g window-status-separator ' '
+# set-option -g window-status-format "#{window_index}:#{pane_current_command}#{window_flags} "
+    #  
+set-option -g window-status-format "#[fg=#92959b]#[fg=#2e3440, bg=#92959b]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#2e3440]"
+set-option -g window-status-current-format "#[fg=#81a1c1]#[fg=#2e3440, bg=#81a1c1]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#2e3440]"
+set-option -g window-status-current-style "fg=#d0d3dd"
 set-option -g window-status-activity-style none
+set-option -g status-justify centre
 
 #--------------------------------------------------------------------------
 # Key Bindings
@@ -137,3 +149,7 @@ bind y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message 
 
 bind-key -r F new-window t
 bind-key -r D run-shell "t ~/.dotfiles"
+
+# Initialize and run tpm
+run -b "~/.tmux/plugins/tpm/tpm"
+
