Setup lspconfig properly

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -13,6 +13,7 @@
 	cam = commit -am
 	cob = checkout -b
 	co = checkout
+	gone = "!f() { git fetch --all --prune; git branch -vv | awk '/: gone]/{print $1}' | xargs git branch -D; }; f"
 [pull]
 	rebase = false
 [init]
