--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,6 +3,7 @@
 	name = Scott Zirkel
 [merge]
 	tool = code
+	conflictstyle = diff3
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
@@ -18,3 +19,28 @@
 	rebase = false
 [init]
 	defaultBranch = main
+[core]
+	pager = delta
+[diff]
+	colorMoved = default
+[interactive]
+	diffFilter = delta --color-only
+[include]
+	path = ~/.config/delta/themes.gitconfig
+[delta]
+	navigate = true
+	features = side-by-side line-numbers decorations mantis-shrimp
+	plus-style = syntax "#003800"
+	minus-style = syntax "#3f0001"
+
+[delta "decorations"]
+	commit-decoration-style = bold yellow box ul
+	file-style = bold yellow ul
+	file-decoration-style = none
+	hunk-header-decoration-style = cyan box ul
+
+[delta "line-numbers"]
+	line-numbers-left-style = cyan
+	line-numbers-right-style = cyan
+	line-numbers-minus-style = 124
+	line-numbers-plus-style = 28
