--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,32 +1,51 @@
-# One Dark by Giuseppe Cesarano, https://github.com/GiuseppeCesarano
-# This work is licensed under the terms of the GPL-2.0 license.
-# For a copy, see https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html.
+# vim:ft=kitty
 
-# Colors
+## name: Kanagawa
+## license: MIT
+## author: Tommaso Laurenzi
+## upstream: https://github.com/rebelot/kanagawa.nvim/
 
-foreground #979eab
-background #2e3440
 
-color0 #2e3440
-color1 #e06c75
-color2 #98c379
-color3 #e5c07b
-color4 #61afef
-color5 #be5046
-color6 #56b6c2
-color7 #979eab
-color8 #393e48
-color9 #d19a66
-color10 #56b6c2
-color11 #e5c07b
-color12 #61afef
-color13 #be5046
-color14 #56b6c2
-color15 #abb2bf
+background #1F1F28
+# foreground #DCD7BA
+foreground #faf7e7
+selection_background #2D4F67
+selection_foreground #C8C093
+url_color #72A7BC
+cursor #C8C093
 
-# Tab Bar
+# Tabs
+active_tab_background #1F1F28
+active_tab_foreground #C8C093
+inactive_tab_background  #1F1F28
+inactive_tab_foreground #727169
+#tab_bar_background #15161E
 
-active_tab_foreground   #2e3440
-active_tab_background   #979eab
-inactive_tab_foreground #abb2bf
-inactive_tab_background #2e3440
+# normal
+color0 #090618
+color1 #C34043
+color2 #76946A
+color3 #C0A36E
+color4 #7E9CD8
+color5 #957FB8
+color6 #6A9589
+# color7 #C8C093
+color7 #e5e9f0
+
+# bright
+color8  #727169
+color9  #E82424
+color10 #98BB6C
+color11 #E6C384
+color12 #7FB4CA
+color13 #938AA9
+color14 #7AA89F
+# color15 #DCD7BA
+color15 #e5e9f0
+
+
+# extended colors
+color16 #FFA066
+color17 #FF5D62
+  
+
