--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,7 +14,8 @@ window_padding_width 5
 hide_window_decorations no
 macos_show_window_title_in all
 macos_quit_when_last_window_closed true
-macos_titlebar_color #2e3440
+# macos_titlebar_color #2e3440
+macos_titlebar_color #1f1f28
 macos_show_window_title_in menubar
 macos_traditional_fullscreen no
 remember_window_size yes
