--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,6 +26,7 @@ set -g renumber-windows on
 
 # Improve colors
 set -g default-terminal "${TERM}"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Enable undercurl
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
@@ -72,12 +73,15 @@ set-option -g status-right-length 100
 set-option -g status-left " #[fg=#92959b] #{session_name} "
 set-option -g status-right "#[fg=#92959b] %d/%m %R"
 # set -g status-right '#[fg=#d0d3dd,bg=#434c5e] %d/%m #[fg=#2e3440,bg=#81a1c1] %R '
-set-option -g status-style "fg=#92959b bg=#2e3440"
+# set-option -g status-style "fg=#92959b bg=#2e3440"
+set-option -g status-style "fg=#92959b bg=#1f1f28"
 set-option -g window-status-separator ' '
 # set-option -g window-status-format "#{window_index}:#{pane_current_command}#{window_flags} "
     #  
-set-option -g window-status-format "#[fg=#92959b]#[fg=#2e3440, bg=#92959b]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#2e3440]"
-set-option -g window-status-current-format "#[fg=#81a1c1]#[fg=#2e3440, bg=#81a1c1]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#2e3440]"
+# set-option -g window-status-format "#[fg=#92959b]#[fg=#2e3440, bg=#92959b]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#2e3440]"
+# set-option -g window-status-current-format "#[fg=#81a1c1]#[fg=#2e3440, bg=#81a1c1]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#2e3440]"
+set-option -g window-status-format "#[fg=#92959b]#[fg=#1f1f28, bg=#92959b]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#1f1f28]"
+set-option -g window-status-current-format "#[fg=#81a1c1]#[fg=#1f1f28, bg=#81a1c1]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#1f1f28]"
 set-option -g window-status-current-style "fg=#d0d3dd"
 set-option -g window-status-activity-style none
 set-option -g status-justify centre
