Added notes for another theme

--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -8,7 +8,7 @@
 
 background #1F1F28
 # foreground #DCD7BA
-foreground #faf7e7
+foreground #cac8bb
 selection_background #2D4F67
 selection_foreground #C8C093
 url_color #72A7BC
