--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,7 +25,7 @@ set -g allow-rename on
 set -g renumber-windows on
 
 # Improve colors
-set -g default-terminal "${TERM}"
+set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Enable undercurl
