--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,7 +5,8 @@ italic_font CaskaydiaCove Nerd Font Mono Italic
 
 font_features CaskaydiaCoveNerdFontCompleteM-Regular +zero +onum
 font_size 15
-adjust_line_height 175%
+adjust_line_height 200%
+# adjust_line_height 175%
 
 background_opacity 1
 background_tint 1
