--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,9 @@
-font_family CaskaydiaCove Nerd Font Mono Regular
-bold_font CaskaydiaCove Nerd Font Mono Bold
-bold_italic_font CaskaydiaCove Nerd Font Mono Bold Italic
-italic_font CaskaydiaCove Nerd Font Mono Italic
+font_family MonoLisa Set 1 Regular
+bold_font MonoLisa Set 1 Bold
+bold_italic_font MonoLisaSet1 Bold Italic
+italic_font MonoLisa Set 1 Regular Italic
 
-font_features CaskaydiaCoveNerdFontCompleteM-Regular +zero +onum
+font_features MonoLisaSet1-Regular +zero +ss02 +ss04 +ss07 +ss08
 font_size 15
 adjust_line_height 200%
 # adjust_line_height 175%
