--- a/ghostty/config
+++ b/ghostty/config
@@ -1,29 +1,40 @@
+window-padding-x = 2
+window-padding-y = 2
+
+# Fix sending shift+enter for Claude Code
+keybind = shift+enter=text:\x1b\r
+
+theme = Kanagawa Wave
 # Kanagawa theme colors to match Kitty
-background = 1f1f28
-foreground = cac8bb
-selection-background = 2d4f67
-selection-foreground = c8c093
-cursor-color = c8c093
+# background = 1f1f28
+# foreground = cac8bb
+# selection-background = 2d4f67
+# selection-foreground = c8c093
+# cursor-color = c8c093
+
+shell-integration-features = no-cursor
+cursor-color = 00ff00
+cursor-style = block
 
 # Normal colors
-palette = 0=#090618
-palette = 1=#c34043
-palette = 2=#76946a
-palette = 3=#c0a36e
-palette = 4=#7e9cd8
-palette = 5=#957fb8
-palette = 6=#6a9589
-palette = 7=#e5e9f0
+# palette = 0=#090618
+# palette = 1=#c34043
+# palette = 2=#76946a
+# palette = 3=#c0a36e
+# palette = 4=#7e9cd8
+# palette = 5=#957fb8
+# palette = 6=#6a9589
+# palette = 7=#e5e9f0
 
 # Bright colors
-palette = 8=#727169
-palette = 9=#e82424
-palette = 10=#98bb6c
-palette = 11=#e6c384
-palette = 12=#7fb4ca
-palette = 13=#938aa9
-palette = 14=#7aa89f
-palette = 15=#e5e9f0
+# palette = 8=#727169
+# palette = 9=#e82424
+# palette = 10=#98bb6c
+# palette = 11=#e6c384
+# palette = 12=#7fb4ca
+# palette = 13=#938aa9
+# palette = 14=#7aa89f
+# palette = 15=#e5e9f0
 
 # Font settings to match Kitty
 font-family = "MonoLisa Set 1 Regular"
@@ -31,6 +42,8 @@ font-size = 15
 font-style-bold = "MonoLisa Set 1 Bold"
 font-style-italic = "MonoLisa Set 1 Regular Italic"
 font-style-bold-italic = "MonoLisaSet1 Bold Italic"
+font-thicken = true
+font-thicken-strength = 255
 
 # Font features
 font-feature = zero
