--- a/ghostty/config
+++ b/ghostty/config
@@ -1,10 +1,14 @@
-window-padding-x = 2
-window-padding-y = 2
+window-padding-balance = true
+window-padding-x = 12
+window-padding-y = 16
+
+adjust-cell-height = 30
 
 # Fix sending shift+enter for Claude Code
 keybind = shift+enter=text:\x1b\r
 
-theme = Kanagawa Wave
+theme = dark:catppuccin-frappe,light:cappuccin-latte
+# theme = Kanagawa Wave
 # Kanagawa theme colors to match Kitty
 # background = 1f1f28
 # foreground = cac8bb
@@ -52,5 +56,3 @@ font-feature = ss04
 font-feature = ss07
 font-feature = ss08
 
-# Line height (200% in Kitty)
-adjust-cell-height = 100%
