--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,164 +1,207 @@
-#--------------------------------------------------------------------------
-# Configuration
-#--------------------------------------------------------------------------
+# Reducing escape time to increase perceived performance
+# when using Vim from within Tmux
+#
+# Ref: https://github.com/tmux/tmux/issues/353#issuecomment-294570322
+set-option -s escape-time 5
 
-set -g @plugin 'tmux-plugins/tpm'
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
-#+--- Color Themes ---+
-# set -g @plugin "arcticicestudio/nord-tmux"
+# Reload config file
+bind r source-file ~/.tmux.conf
 
-
-# Use Vi mode
-setw -g mode-keys vi
-
-# Increase scrollback buffer size
-set -g history-limit 10000
-
-# Start window and pane numbering from 1 for easier switching
-set -g base-index 1
-set -g pane-base-index 1
-
-# Allow automatic renaming of windows
-set -g allow-rename on
-
-# Renumber windows when one is removed
-set -g renumber-windows on
-
-# Improve colors
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
-
-# Enable undercurl
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
-
-# Enable undercurl colors
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-
-# Allow the mouse to resize windows and select tabs
-set -g mouse on
-
-# Allow tmux to set the terminal title
-set -g set-titles on
-
-# Monitor window activity to display in the status bar
-setw -g monitor-activity on
-
-# A bell in another window should cause a bell in the current window
-set -g bell-action any
-
-# Don't show distracting notifications
-set -g visual-bell off
-set -g visual-activity off
-
-# Focus events enabled for terminals that support them
-set -g focus-events on
-
-# Useful when using sharing a session with different size terminals
-setw -g aggressive-resize on
-
-# Don't detach tmux when killing a session
-set -g detach-on-destroy off
-
-# Address vim mode switching delay (https://superuser.com/a/252717/65504)
-set -s escape-time 0
-
-#----------------------------------------------------------
-# Status line
-#----------------------------------------------------------
-
-# Status line customisation
-set-option -g status-position bottom
-set-option -g status-left-length 100
-set-option -g status-right-length 100
-set-option -g status-left " #[fg=#92959b] #{session_name} "
-set-option -g status-right "#[fg=#92959b] %d/%m %R"
-# set -g status-right '#[fg=#d0d3dd,bg=#434c5e] %d/%m #[fg=#2e3440,bg=#81a1c1] %R '
-# set-option -g status-style "fg=#92959b bg=#2e3440"
-set-option -g status-style "fg=#92959b bg=#1f1f28"
-set-option -g window-status-separator ' '
-# set-option -g window-status-format "#{window_index}:#{pane_current_command}#{window_flags} "
-    #  
-# set-option -g window-status-format "#[fg=#92959b]#[fg=#2e3440, bg=#92959b]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#2e3440]"
-# set-option -g window-status-current-format "#[fg=#81a1c1]#[fg=#2e3440, bg=#81a1c1]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#2e3440]"
-set-option -g window-status-format "#[fg=#92959b]#[fg=#1f1f28, bg=#92959b]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#1f1f28]"
-set-option -g window-status-current-format "#[fg=#81a1c1]#[fg=#1f1f28, bg=#81a1c1]#I #[fg=#d0d3dd, bg=#434c5e] #W #[fg=#434c5e, bg=#1f1f28]"
-set-option -g window-status-current-style "fg=#d0d3dd"
-set-option -g window-status-activity-style none
-set-option -g status-justify centre
-
-#--------------------------------------------------------------------------
-# Key Bindings
-#--------------------------------------------------------------------------
-
-# -r means that the bind can repeat without entering prefix again
-# -n means that the bind doesn't use the prefix
-
-# Set the prefix to Ctrl+Space
-set -g prefix C-Space
-
-# Send prefix to a nested tmux session by doubling the prefix
-bind C-Space send-prefix
-
-# 'PREFIX r' to reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf\; display-message '~/.tmux.conf reloaded'
-
-# Allow holding Ctrl when using using prefix+p/n for switching windows
-bind C-p previous-window
-bind C-n next-window
-
-# Move around panes like in vim
-bind -r h select-pane -L
-bind -r j select-pane -D
+# Pane Navigation Rebinds
 bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
 bind -r l select-pane -R
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
 
-# Resize panes with vim-like keys
-bind -r J resize-pane -D 5
+# Pane Resizing Reginds
 bind -r K resize-pane -U 5
+bind -r J resize-pane -D 5
 bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
-# Smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+# Use Telescope Tmux for picking sessions and windows
+# bind s display-popup -E -w 80% -h 80% nvim -c ":Telescope tmux sessions quit_on_select=true"
+# bind w display-popup -E -w 80% -h 80% nvim -c ":Telescope tmux windows quit_on_select=true"
 
-# Switch between previous and next windows with repeatable
-bind -r n next-window
-bind -r p previous-window
+unbind Up
+unbind Down
+unbind Left
+unbind Right
+unbind C-up
+unbind C-Down
+unbind C-Left
+unbind C-Right
 
-# Move the current window to the next window or previous window position
-bind -r N run-shell "tmux swap-window -t $(expr $(tmux list-windows | grep \"(active)\" | cut -d \":\" -f 1) + 1)"
-bind -r P run-shell "tmux swap-window -t $(expr $(tmux list-windows | grep \"(active)\" | cut -d \":\" -f 1) - 1)"
+# Don't rename windows automatically
+set-option -g allow-rename off
 
-# Switch between two most recently used windows
-bind Space last-window
+# Start windows and panes at 1
+set -g base-index 1
+set-window-option -gq -g pane-base-index 1
 
-# Switch between two most recently used sessions
-bind ^ switch-client -l
+# Set vi as the default editor
+set -g status-keys vi
 
-# use PREFIX+| (or PREFIX+\) to split window horizontally and PREFIX+- or
-# (PREFIX+_) to split vertically also use the current pane path to define the
-# new pane path
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+# Fix for background vim color when in Tmux
+#set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
-# Change the path for newly created windows
-bind c new-window -c "#{pane_current_path}"
+# Fix Vim mode switching delay
+set -s escape-time 5
 
-# Setup 'v' to begin selection as in Vim
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
-    'bind-key -T copy-mode-vi v send-keys -X begin-selection;'
+# Increase history scrollback limit
+set -g history-limit 50000
 
-bind y run -b "tmux show-buffer | xclip -selection clipboard"\; display-message "Copied tmux buffer to system clipboard"
+# Increase time Tmux messages are displayed
+set -g display-time 4000
 
-bind-key -r F new-window t
-bind-key -r D run-shell "t ~/.dotfiles"
+# Refresh status more often
+set -g status-interval 5
 
-# Initialize and run tpm
-run -b "~/.tmux/plugins/tpm/tpm"
+# Aggressively resize when using multiple monitors
+set-window-option -gq -g aggressive-resize on
+
+# Pane Navigation
+set -g mouse on # I know, I know. It's just for quick scrolling.
+set-window-option -gq -g mode-keys vi
+
+# Create Panes: window splitting
+# Split vertically
+unbind %
+bind \\ split-window -h    # Prefix | to create vertical split
+# Split horizontally
+unbind '"'
+bind - split-window -v    # Prefix - to create horizontal split
+
+# Cheatsheet
+# bind-key -r i run-shell "tmux neww ~/.dotfiles/bin/tmux-cht.sh"
+
+# Chris Toomey's Vim-Tmux Navigator
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+# Set plugin directory
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins'
+
+# Pomodoro Timer
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+
+# Options
+set -g @pomodoro_start 'p'                          # Start a Pomodoro with tmux-prefix + p
+set -g @pomodoro_cancel 'P'                         # Cancel a Pomodoro with tmux-prefix key + P
+
+set -g @pomodoro_mins 25                            # The duration of the pomodoro
+set -g @pomodoro_break_mins 5                       # The duration of the break after the pomodoro
+
+set -g @pomodoro_on " 🍅 "           # The formatted output when the pomodoro is running
+set -g @pomodoro_complete " #[fg=colour2]🏝  "   # The formatted output when the break is running
+
+set -g @pomodoro_notifications 'on'                 # Turn on/off desktop notifications
+set -g @pomodoro_sound 'Pop'                        # Sound for desktop notifications (Run `ls /System/Library/Sounds` for a list of sounds to use)
+
+# ----------------------------=== Theme ===--------------------------
+
+# status
+set-option -gq status "on"
+set-option -gq status-bg "#333C43"
+set-option -gq status-justify "left"
+set-option -gq status-left-length "100"
+set-option -gq status-right-length "100"
+
+# messages
+set-option -gq message-style "fg=#99d1db,bg=#51576d,align=centre"
+set-option -gq message-command-style "fg=#99d1db,bg=#51576d,align=centre"
+
+# panes
+set-option -gq pane-border-style "fg=#d3c6aa"
+set-option -gq pane-active-border-style "fg=#d3c6aa"
+
+# windows
+set-window-option -gq window-status-activity-style "fg=#c6d0f5,bg=#232634,none"
+set-window-option -gq window-status-separator " "
+set-window-option -gq window-status-style "fg=#c6d0f5,bg=#232634,none"
+
+# --------=== Statusline
+
+set-option -gq status-left ""
+set-option -gq status-right "#[fg=#dbbc7f,bg=#333C43,nobold,nounderscore,noitalics]#[fg=#232634,bg=#dbbc7f,nobold,nounderscore,noitalics] #[fg=#c6d0f5,bg=#293136] #W #{?client_prefix,#[fg=#e78284],#[fg=]}#[bg=#333C43]#[fg=#a7c080] #{?client_prefix,#[bg=#a7c080],#[bg=#a7c080]}#[fg=#232634] #[fg=#c6d0f5,bg=#293136] #S "
+
+# current_dir
+set-window-option -gq window-status-format "#[fg=#232634,bg=#d3c6aa] #I #[fg=#c6d0f5,bg=#333C43] #W "
+set-window-option -gq window-status-current-format "#[fg=#232634,bg=#a7c080] #I #[fg=#c6d0f5,bg=#333C43] #W "
+
+# parent_dir/current_dir
+# set-window-option -gq window-status-format "#[fg=colour232,bg=colour111] #I #[fg=colour222,bg=colour235] #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
+# set-window-option -gq window-status-current-format "#[fg=colour232,bg=colour208] #I #[fg=colour255,bg=colour237] #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
+
+# --------=== Modes
+set-window-option -gq clock-mode-colour "#8caaee"
+set-window-option -gq mode-style "fg=#f4b8e4 bg=#626880 bold"
+
+## List of Plugins
+# Plugin Manager
+set -g @plugin 'tmux-plugins/tpm'
+
+# Color Scheme (Gruvbox)
+#set -g @plugin 'egel/tmux-gruvbox'
+#set -g @tmux-gruvbox 'dark'
+
+# Tmux Resurrect
+# - Restores tmux sessions on restart
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Tmux Continuum
+# - Continuous saving of tmux environment
+# - Automatic tmux start when computer is booted
+# - Automatic restore when tmux is started
+# - Works with Tmux Resurrect
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+
+
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+# Tmux Open
+set -g @plugin 'tmux-plugins/tmux-open'
+
+# Tmux Yank
+set -g @plugin 'tmux-plugins/tmux-yank'
+# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
+# Tmux FZF
+set -g @plugin 'sainnhe/tmux-fzf'
+
+# Tmux2k
+set -g @plugin '2kabhishek/tmux2k'
+set -g @tmux2k-theme 'catppuccin'
+set -g @tmux2k-icons-only true
+
+TMUX_FZF_PREVIEW=0
+bind-key "s" run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/session.sh switch"
+
+## Initialize TMUX Plugin Manager
+## THIS MUST BE THE LAST LINE OF THIS FILE!
+run '~/.tmux/plugins/tpm/tpm'
