--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,9 +5,10 @@
 set-option -s escape-time 5
 
 # remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set -g prefix C-a
+# unbind C-b
+# set-option -g prefix C-a
+# bind-key C-a send-prefix
 
 # Reload config file
 bind r source-file ~/.tmux.conf
@@ -125,45 +126,46 @@ set -g @pomodoro_sound 'Pop'                        # Sound for desktop notifica
 # ----------------------------=== Theme ===--------------------------
 
 # status
-set-option -gq status "on"
-set-option -gq status-bg "#333C43"
-set-option -gq status-justify "left"
-set-option -gq status-left-length "100"
-set-option -gq status-right-length "100"
+# set-option -gq status "on"
+# set-option -gq status-bg "#333C43"
+# set-option -gq status-justify "left"
+# set-option -gq status-left-length "100"
+# set-option -gq status-right-length "100"
 
 # messages
-set-option -gq message-style "fg=#99d1db,bg=#51576d,align=centre"
-set-option -gq message-command-style "fg=#99d1db,bg=#51576d,align=centre"
+# set-option -gq message-style "fg=#99d1db,bg=#51576d,align=centre"
+# set-option -gq message-command-style "fg=#99d1db,bg=#51576d,align=centre"
 
 # panes
-set-option -gq pane-border-style "fg=#d3c6aa"
-set-option -gq pane-active-border-style "fg=#d3c6aa"
+# set-option -gq pane-border-style "fg=#d3c6aa"
+# set-option -gq pane-active-border-style "fg=#d3c6aa"
 
 # windows
-set-window-option -gq window-status-activity-style "fg=#c6d0f5,bg=#232634,none"
-set-window-option -gq window-status-separator " "
-set-window-option -gq window-status-style "fg=#c6d0f5,bg=#232634,none"
+# set-window-option -gq window-status-activity-style "fg=#c6d0f5,bg=#232634,none"
+# set-window-option -gq window-status-separator " "
+# set-window-option -gq window-status-style "fg=#c6d0f5,bg=#232634,none"
 
 # --------=== Statusline
 
-set-option -gq status-left ""
-set-option -gq status-right "#[fg=#dbbc7f,bg=#333C43,nobold,nounderscore,noitalics]#[fg=#232634,bg=#dbbc7f,nobold,nounderscore,noitalics] #[fg=#c6d0f5,bg=#293136] #W #{?client_prefix,#[fg=#e78284],#[fg=]}#[bg=#333C43]#[fg=#a7c080] #{?client_prefix,#[bg=#a7c080],#[bg=#a7c080]}#[fg=#232634] #[fg=#c6d0f5,bg=#293136] #S "
+# set-option -gq status-left ""
+# set-option -gq status-right "#[fg=#dbbc7f,bg=#333C43,nobold,nounderscore,noitalics]#[fg=#232634,bg=#dbbc7f,nobold,nounderscore,noitalics] #[fg=#c6d0f5,bg=#293136] #W #{?client_prefix,#[fg=#e78284],#[fg=]}#[bg=#333C43]#[fg=#a7c080] #{?client_prefix,#[bg=#a7c080],#[bg=#a7c080]}#[fg=#232634] #[fg=#c6d0f5,bg=#293136] #S "
 
 # current_dir
-set-window-option -gq window-status-format "#[fg=#232634,bg=#d3c6aa] #I #[fg=#c6d0f5,bg=#333C43] #W "
-set-window-option -gq window-status-current-format "#[fg=#232634,bg=#a7c080] #I #[fg=#c6d0f5,bg=#333C43] #W "
+# set-window-option -gq window-status-format "#[fg=#232634,bg=#d3c6aa] #I #[fg=#c6d0f5,bg=#333C43] #W "
+# set-window-option -gq window-status-current-format "#[fg=#232634,bg=#a7c080] #I #[fg=#c6d0f5,bg=#333C43] #W "
 
 # parent_dir/current_dir
 # set-window-option -gq window-status-format "#[fg=colour232,bg=colour111] #I #[fg=colour222,bg=colour235] #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
 # set-window-option -gq window-status-current-format "#[fg=colour232,bg=colour208] #I #[fg=colour255,bg=colour237] #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
 
 # --------=== Modes
-set-window-option -gq clock-mode-colour "#8caaee"
-set-window-option -gq mode-style "fg=#f4b8e4 bg=#626880 bold"
+# set-window-option -gq clock-mode-colour "#8caaee"
+# set-window-option -gq mode-style "fg=#f4b8e4 bg=#626880 bold"
 
 ## List of Plugins
 # Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin '2kabhishek/tmux-tea'
 
 # Color Scheme (Gruvbox)
 #set -g @plugin 'egel/tmux-gruvbox'
@@ -198,6 +200,8 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin '2kabhishek/tmux2k'
 set -g @tmux2k-theme 'catppuccin'
 set -g @tmux2k-icons-only true
+set -g @tmux2k-time-format "%d %I:%M"
+set -g @tmux2k-right-plugins "cpu ram battery time"
 
 TMUX_FZF_PREVIEW=0
 bind-key "s" run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/session.sh switch"
